# bc-camping-bot

./: .gitignore  CLAUDE.md  Install BC Camping Bot.command  README.md  SETUP.md  install-mac.sh  install.sh  launch.bat  launch.command  pyproject.toml  run.py  setup.bat  setup.sh  update.command
.github/workflows/: build.yml
bc_camping_bot/: api_booker.py  booker.py  config.py  dayuse.py  gui.py  notify.py  platform_utils.py  runner.py  session.py  setup_browsers.py  stealth.py  timesync.py
configs/: example.yaml
